# bifrost

./: .gitignore  CONTRIBUTING.md  PR_COMMENT_environment-import.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  redocly-openapi-3.1.0.yaml
.github/: FUNDING.yml
.github/workflows/: release.yml
scripts/: build-macos-release.js  build-windows-release.js  set-version.js
src/: App.css  App.tsx  KeyValueTable.tsx  TopBar.tsx  VariableInput.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collection.rs  environment.rs  fs.rs  http.rs  import_export.rs  mod.rs  settings.rs  state.rs
src-tauri/src/import_export/: mappers.rs  mod.rs  portable_export.rs  postman_export.rs  postman_import.rs
src-tauri/src/model/: collection.rs  environment.rs  http.rs  mod.rs  settings.rs  state.rs
src-tauri/src/storage/: paths.rs
src/components/: AppSelect.tsx  CollectionRunnerModal.tsx  CollectionsModal.tsx  ConfirmationModal.tsx  EnvironmentsModal.tsx  FindBar.tsx  MultipartBodyEditor.tsx  MultipartFieldRow.tsx  NoCollectionsModal.tsx  RequestBodyEditor.tsx  RequestScriptsEditor.tsx  ResponseExtractionEditor.tsx  ResponsePanel.tsx  ResponseTestsPanel.tsx  SettingsModal.tsx  TopbarSelector.tsx
src/helpers/: AppSettings.ts  ClipboardRequestTransfer.test.ts  ClipboardRequestTransfer.ts  CollectionTree.ts  CollectionsHelper.ts  CurlCommand.ts  CurlImport.test.ts  CurlImport.ts  HttpHelper.ts  (+38 more)
(+37 files in other folders)
