[package]
name = "Bifrost"
version = "1.6.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bifrost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
